create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,20 +24,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-121703988-1');
-</script>
-<!-- /Google Analytics -->
-
-
   <section class="menu cid-qWyuFwxsND" once="menu" id="menu2-1t">
 
     
@@ -80,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/c">website builder</a></section><section class="mbr-section content4 cid-qWsHYHLJWJ" id="content4-h">
+<section class="engine"><a href="https://mobirise.me/c">web builder</a></section><section class="mbr-section content4 cid-qWsHYHLJWJ" id="content4-h">
 
     
 
@@ -382,7 +368,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="c9D3Tvmm1Q0gYR5HcF3yyWLdHnizshwOdHDGET8yIxTJRYnsXuQvlUVva0t/zEQXFEfQ1v9Fox1T5nbAnqwd13L2waAaNN55bsBGTpZrxkhihaISIbhxL53SaWAced2u" data-form-email="true">
+                        <input type="hidden" value="NhUNK6e3W8xBkgcPz7z+sA1vOcF7jFwkGGyjG8kc6e+JwHMJMiM5axSOB/qnVRkoBMGQZTvhrcC9K2uV4JWhcsBjecu1pGkVDoSlokWbvbajsjZ0YszKbWsAhkSS1OPk" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-22">
                         </div>
