--- a/page7.html
+++ b/page7.html
@@ -24,20 +24,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-121703988-1');
-</script>
-<!-- /Google Analytics -->
-
-
   <section class="menu cid-qWykKO3hMV" once="menu" id="menu2-1b">
 
     
@@ -80,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/s">bootstrap themes</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/e">how to make a website for free</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -235,11 +221,9 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
-                    <div data-form-alert="" hidden="">
-                        Thanks for filling out the form!
-                    </div>
+                    <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GYUIshTMCDj72zLwqyiXvupEPRc5fIbPL5BA4IvvtZtJRcVCLHC4lfFtU7X1FvIvKf3AjeAwe+tCXVDl8pgGzCJCZjdBS6goc+90uYlBy90e2LxdjlSBFOZ5DwhgppIn" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PJwbksqqFl0/SuwqzhyVcQNuOc3xsihskAxbxngAF86P1y5uBM2KyyX0GBBqS0i7IKLtNCVmPVPDX8ySGwjFQBGMzqsFiRLBPf1fedUYtPitZKRYdHaDFhPo32PVdr+o" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -312,7 +296,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="JrxE+JX8Qis7zSUafyazm60CTKH8YaSmXo+fJj+3qZnDswMsD2CND48t2/cJ2l9hnVcVC2rxx+dsR7unzqoTPpZj2MsGab7TbsBFPi2aHylu/rTcLoL113UXdJ80HdT6" data-form-email="true">
+                        <input type="hidden" value="vfM2BR0k6oMcCY9znVSMofCrHBfrSBa/lD7pOH+gIXLYULPJKwl8y/wCXTw1oBewi/2kjUCFdS7pECYnrLBfA02iQEbA8jH3+TQRaZhOxWxMt8I+WnI43zHRrVS/PRZM" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
