--- a/page8.html
+++ b/page8.html
@@ -24,20 +24,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-121703988-1');
-</script>
-<!-- /Google Analytics -->
-
-
   <section class="menu cid-qWypyXbt3n" once="menu" id="menu2-1f">
 
     
@@ -80,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/t">free amp template</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/n">free landing page html templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -247,11 +233,9 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
-                    <div data-form-alert="" hidden="">
-                        Thanks for filling out the form!
-                    </div>
+                    <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0fjEELGLTHXndG71xb3XRFsaV7wP2GPDoiu28iRtIdh9SKkH3T0gOpOLez0j3OwoVwMl6xnyUpXvt47W8CevPkF809WR6FA0ueNT7lUFEAtwRY1SqaGwIEU408+c2/iS" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="T7s7AZZDdzUlTuEzXOiy6mf7EN1f7ABPW5XzSWeg0IbtLLqJ1nPAIGKfQXc8bdRsC3UFCsDWJNmr7oIRV+hZzoMRiy6etk22BYicD3IYEIsf0ZvFS+4i84sfVFLZlQe4" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -324,7 +308,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="tOcLzq9wy14KT3OjTMFusI0QJyyAs/rTb7b5iKj4KuCM/R6KmHByN9+zGCpe61ISSQ5bJee0pIQ1iO+7j4uHYJwcBEYUCD29nVh36e92Bdox17YGLbKfc1TczlEg7k3I" data-form-email="true">
+                        <input type="hidden" value="JIKpu0M7pZ/TOrqsAvMQ1t+HJ1MtUoCJooLOxJ4XAGh8A7QNMAGhU+xohsamj+0BzTm4xf5JKtRx00r43/rRfUQQVjEJzLGZklydaFQlvdWmxUHZTtmZIZHSnIw8mhQO" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
