--- a/page10.html
+++ b/page10.html
@@ -24,20 +24,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-121703988-1');
-</script>
-<!-- /Google Analytics -->
-
-
   <section class="menu cid-qWyq6tv7Ni" once="menu" id="menu2-1n">
 
     
@@ -80,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/b">create a site</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise review</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
 
   
   
@@ -233,7 +219,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DdrHOO5bJwx0TJd+/80krjXxFaMwF8CRII9TJ8hdE5hQTAjCeAuFgo82AgKxA8qpJ4BIvU+roE48O6SwAEL+YgY/+MwVbMOPCAfAUgQHfoLvynjK3roqANytcMmvfDR9" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QubC2L3kxjtlD2Q9KkwIc59924isS8//bwJghH3qIBEWOXfB7z0Oj7Tn72A2quJpT8rrM1L7w4F7pnDwVXo7S9i7gLEibgohRTvdl+/YxHdo4il7+I76kg+vroiChaq0" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -306,7 +292,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="wNVSO85dB87dMTayB9Gd289uffxQNADnbKbAbBKfhaCyo4HGH+so98QYi27CSc2pLRi1pVLoDoY4gcJAjI2ZSCGArigMlsg1AiIpfvDAMArj3i5OBDA9EsDJYUDamO5d" data-form-email="true">
+                        <input type="hidden" value="LnOJfKj0dNsGaoX4ZbqusrGmVlyg/ykYpsCs357ywa6acdA0dmU5yWaSQ/BKWNKzVJc/19/HOZbAIPWUgjTG0D747gjo6yxO1VaSdscC45gANgH7/pPkJfXvwuYXFJmT" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2a">
                         </div>
