--- a/page9.html
+++ b/page9.html
@@ -24,20 +24,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-121703988-1');
-</script>
-<!-- /Google Analytics -->
-
-
   <section class="menu cid-qWypRIJwqR" once="menu" id="menu2-1j">
 
     
@@ -80,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
+<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
 
   
   
@@ -234,7 +220,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ii/OtGmQIBcFzag8z1flmG+HVCIFspWDeGR/ZO6opsodgaAPCc9o0sHtTEXJ8R9aPc3lvzEqlEGVRI2N0KX2XPp13s3o9JjS+6AOJv3bVoqRbRPUREpPxHVQGAw7/4Ai" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XIMt5/tIrRXfHl7rmU6mvtMBRusm18c8ESm/Bs1SrYFbBrOFZEan/3Mpz+8jqqfrVbUa7gER0pgafKKtnFyn8tg4WDrq3MITAxYPSOIwcNQYKMzsldAAwsvBonYETnmn" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -307,7 +293,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="Lr2RTIM2PUPao+zXmDl5FBk5S74lmmRE/sVQ+VAKwLO9+XBaTlLjPHMHKfGl/m05I3N4Wm/6Vwxh/vjlaZ62Udvxfg744D0hyC4cEZiR/QLjtRFXwna9bZ9C1DfRpKNA" data-form-email="true">
+                        <input type="hidden" value="1GUd2Ynu1zV4LVjzHch4Rh4ud8o2LfeDAaMO1s3faLqg8vM677tk7/kDQa5HX8XKtxTsHbP2OWj5QVi+VVsv9JoEODyhL4rcdeiBknx/s05v2d0W2zQRYLO7z9xC5U85" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-29">
                         </div>
