--- a/page7.html
+++ b/page7.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/32105038-192968864848463-4043827518682169344-n-122x122.png" type="image/x-icon">
   <meta name="description" content="Web Page Builder Description">
-  <title>iot</title>
+  <title>IoT</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/e">how to make a website for free</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/c">web builder</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -223,7 +223,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PJwbksqqFl0/SuwqzhyVcQNuOc3xsihskAxbxngAF86P1y5uBM2KyyX0GBBqS0i7IKLtNCVmPVPDX8ySGwjFQBGMzqsFiRLBPf1fedUYtPitZKRYdHaDFhPo32PVdr+o" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MZYmJodY2RXAlKHIb8xIusGTHkuJTsx/vukyCNqvWd0d9bwXfUGhj5eE0gQw/RdyO4plDrRGPvDN87pjGDGYmf6pVVXsOG9fbLm9uBXPbfD2sug6vW3uHSNlPWFyqj94" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -296,7 +296,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="vfM2BR0k6oMcCY9znVSMofCrHBfrSBa/lD7pOH+gIXLYULPJKwl8y/wCXTw1oBewi/2kjUCFdS7pECYnrLBfA02iQEbA8jH3+TQRaZhOxWxMt8I+WnI43zHRrVS/PRZM" data-form-email="true">
+                        <input type="hidden" value="yMD8tpnUQsPww5jTu28Epkj2FEFunp7vkhzMATjwVqrcK9gZxPW5i5YZyst+jTw5DOkwGNqYs6pbHpmbv5A16T6st6vE0mt+pqPm053cr9Mp0i156Ohko1XzZvFMJDjd" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
