--- a/page10.html
+++ b/page10.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWyq6tv7Ni" once="menu" id="menu2-1n">
 
     
@@ -52,11 +66,11 @@
                     <a class="nav-link link text-black display-4" href="index.html#slider1-4">
                         Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header1-a">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
-                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Research</a></li>
+                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Colaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/i">web creation software</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
+<section class="engine"><a href="https://mobirise.me/h">how to create a web page for free</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
 
   
   
@@ -219,7 +233,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C6u6qREAQU8G/ghmRq2yRt1uUyo8fuhysgfNONYkrLM5JEjBLHn+V/haNyp/Z9Bh6m8V7UU2A99MgL8GpMZpva7l2WwP+02/8sJebtfCWaOMwK75bX3vpmRHx03Tm5iO" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QrawYYGbB1ZHN/AB8sUZbRDfi5Fip9iZP4xlIQ+KX6jym8A2T+8nVSXpZzprWLUbcs0zITAzNr1ROb9MxpGraDeu4mJz80idkLG6ZI1ScJeub/8woQoPaBU9zRcv95cQ" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -292,7 +306,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="EK9YfC28rAhL96nc0wD7s+4qi7PLgDfT16bX5esseMRsR/MjJOJuCnwuwPWCYGwk4zNSRqPSD8+YAxiq8BrWO4lcE5BHxOf1ibG62h+xLbcJxqDPsho22zZuj5TX6K2F" data-form-email="true">
+                        <input type="hidden" value="jNTrJ4MlUHXiNeMFvwIY/gybUZNYJnBTs09igSHz4ttvBS4qJ8swlQtxYNdWT3pIg2hDr7BqnYTv+/X6Do/v7NCOtS6uxT8XL8retpBxF9Lcw4m5noWflWtOkAxjifUt" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2a">
                         </div>
