--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWyuTbiIvu" once="menu" id="menu2-1v">
 
     
@@ -52,11 +66,11 @@
                     <a class="nav-link link text-black display-4" href="index.html#slider1-4">
                         Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header1-a">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
-                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Research</a></li>
+                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Colaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-qWsMAPvWsa" id="content4-o">
+<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="mbr-section content4 cid-qWsMAPvWsa" id="content4-o">
 
     
 
@@ -132,7 +146,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="J8+WzDOYrkHjbJOhqXkF0Psd3on68+KiwJeM0JmstWqLoqZYAwvOWJ3jfllE3kx46JP2fzsa2OKRx9LCyCcuMoLzwOuF/OPlWiwbsUobsxhQ1mPf/pktAERKuSwGYZJP" data-form-email="true">
+                        <input type="hidden" value="6V7gRpzBCs2wFGCj8evpWiR5g15r+G1EvsVZAoZAkN6HYwus6/Ph0Ht6MoxzEyIS3zk84aV28TTV+CdMqEx6IlQi1o4S4Jeu/I1qcPDupcUDFxjcf2OJXYRoONy+06ia" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-24">
                         </div>
