--- a/page4.html
+++ b/page4.html
@@ -23,6 +23,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWyuNeck2d" once="menu" id="menu2-1u">
 
     
@@ -51,11 +65,11 @@
                     <a class="nav-link link text-black display-4" href="index.html#slider1-4">
                         Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header1-a">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
-                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Research</a></li>
+                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Colaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -65,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop free website</a></section><section class="mbr-section content5 cid-qWy4treA4Z" id="content5-17">
+<section class="engine"><a href="https://mobirise.me/x">css templates</a></section><section class="mbr-section content5 cid-qWy4treA4Z" id="content5-17">
 
     
 
@@ -229,7 +243,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="EG+J8UiHPZ413i/RDyiIYFi25NwGBKXPzhzBI2JfpeQQ2e9TW7RS1Pi1K0LfewyU17Boyt24tRDIZZ0Qr7irDgZUPn8cKYAGN0/oOxGmi/I/b+MRVFJpNtg/PzPcJvHr" data-form-email="true">
+                        <input type="hidden" value="fs42AdT7pGB9ERuJHI9lboSB8iu5/ZTDQDEGpnVQ3FwRYgdfwXWwCtkG95iAw/mSsMhhsJ3kSoK6RX5K8X4n1qnTXvvBa4UvyWgjDQqBlSZ99FIVq8ylfdIiRMfhsiqu" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-23">
                         </div>
