--- a/page7.html
+++ b/page7.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWykKO3hMV" once="menu" id="menu2-1b">
 
     
@@ -52,11 +66,11 @@
                     <a class="nav-link link text-black display-4" href="index.html#slider1-4">
                         Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header1-a">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
-                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Research</a></li>
+                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Colaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/c">web builder</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/y">free html web templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -223,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MZYmJodY2RXAlKHIb8xIusGTHkuJTsx/vukyCNqvWd0d9bwXfUGhj5eE0gQw/RdyO4plDrRGPvDN87pjGDGYmf6pVVXsOG9fbLm9uBXPbfD2sug6vW3uHSNlPWFyqj94" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1x6dqW1h9Z8JZQPWHllcgPGSGmv2aW7UcWtKSJjEIGHdp5gYKrQYGk701BCR6JmDtms364Q5zuId8RMZ5RVcz/pwLBqGBVP9CmhKjQYqzABtRl+tPfXZuJwM6wGG2Nm9" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -296,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="yMD8tpnUQsPww5jTu28Epkj2FEFunp7vkhzMATjwVqrcK9gZxPW5i5YZyst+jTw5DOkwGNqYs6pbHpmbv5A16T6st6vE0mt+pqPm053cr9Mp0i156Ohko1XzZvFMJDjd" data-form-email="true">
+                        <input type="hidden" value="I7q+ZlX0GllwQBTV3Wfb4Wd5bhXnTOG2d7nDT4V+pEncZy03uAlreCnwoDBSRvi96k3afRvl54FkMHopuEwCWFQq//m8/hZ+eagBvgFXN+0q8f+qDxteH1CTLBSvnBIK" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
