--- a/page8.html
+++ b/page8.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWypyXbt3n" once="menu" id="menu2-1f">
 
     
@@ -52,11 +66,11 @@
                     <a class="nav-link link text-black display-4" href="index.html#slider1-4">
                         Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header1-a">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
-                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Research</a></li>
+                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Colaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/v">free html templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/g">how to build a website</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -235,7 +249,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MrtTZ8JvxLcPvo5ej+r4VtFi/n6PAYuvGseVCA33VhWhTnneszGf3oUxWwvvWCanP9oNV/kUHj7GUg38Mosio9UtaDE1YxInJeKmYhzrZeRuQPMtfxje7ucT5uhg3V0U" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xqtsmqDtgHtFxrI/C/un5c5t/5t44WriVWb9BqV2jidMOu75A5eQI6bkd8Qc6hLfrnonUcmh1kmcOx1/x3qCMlOIj/sPXepuLwRRe4aRTOeLuFKjRN2DaDMUpHQAJeLr" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -308,7 +322,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ZOfCF2Jt3kzcRLNF131UoOTnzxvjN47TEgleXp/j+nSXVORKqECsFVyRACWHvgSfJdQNZkFQ7mls7Y23Ja0Dc+C1NeCGQqS3GRc/E/Sm2HkFY2w6/e1yA2zfvDQY4vEN" data-form-email="true">
+                        <input type="hidden" value="5zS1WfEN4h7vmSf/kviCVeknq514YNRZq4DyL7W9+akjyvT/z6MUpabqCvgm59g8mmXHPPAglEhPgHyYVGFiI2vh371L0MRtiAaKIc+2i9OETJZmifY52ABX4qdF/NeC" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
