--- a/page9.html
+++ b/page9.html
@@ -24,6 +24,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121703988-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121703988-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qWypRIJwqR" once="menu" id="menu2-1j">
 
     
@@ -52,11 +66,11 @@
                     <a class="nav-link link text-black display-4" href="index.html#slider1-4">
                         Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header1-a">
-                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
+                        About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
-                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Research</a></li>
+                    </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Colaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -66,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/d">free web maker</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
+<section class="engine"><a href="https://mobirise.me/q">free responsive website templates</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
 
   
   
@@ -220,7 +234,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b+vxOPdlxywDmX5cSuIzuX/uix+IXZ7N2YjzQag01DRi1bs3HFrXOOwzg1LxmWC628fyBP/nBwcJATCqVaj+4JZog+Z1gv+MwNMrMzaj6p5zCJh/qnkxairFUPIP059+" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CIUOUQ7tBD3MG/UXo8gHfl8oaf6RGL3tGejuQ+6SGtx99C/YWbrNkymrXw/u3YN3Ms2coqBb/bBuNpIW1Jjr30Tprfr628LYRxyyz4NmdeafluVmqlEpCPxcdlLp3Otq" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -293,7 +307,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="gkRs7Uq1MoxdBQL1CIr2Sfzb7qsbhHRiLwSjH+zKpDlnpkeS5MWj0Lswkbb9WHhX1ZQ1LXMxBMdYSX3gqNMo4C5Ef8i8aV2byR0WJihhZZ3JWeWudlUAs/NqcOvwsV4C" data-form-email="true">
+                        <input type="hidden" value="RwkhccEgIfDzJvF4JR0YJ2E5O/NS+rSRaKmZ3Lxy90nKIfBhkZQY1f4yIXNldCd3n3edSJ38tu7AFVTdL05BXxoR+olniWMVZnCPczRngbLPf1lBjd+plhs9VARBIdG8" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-29">
                         </div>
