create github pages

--- a/page8.html
+++ b/page8.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free website templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/e">how to make a site</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -249,7 +249,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yyq6Rgf3Qrd4/ORntsZCgqplnd3szqCjHL4XmvudeENqTulRrdYOosLKrLGFSEPMv9qdITYxU9ccx1uu8KdGQtPK5MWbd0XY1VDEIuZKaSFpt2H2PIQhJQibnWYEqNG9" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NI+3nF3NiICSgjpXO61YMbptCj74u+BsIRP+DQyHqu4p18tNv/z6ArEBAPI8OP5YhM1WDWzcVvOh3DkFoot3/u8nUHBWNYcRyAquKvqWZ1GtJu8E0EZzbg5zDlYLLBzC" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -322,7 +322,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="nRNi8Opiu3etAOtC7Xyx474lFqfWAL4brS7sAI73KRQQ0SE2V1iE1OsQqlewIkPoWrfz46aQPC4wtffpAFIZ32BYM66GHh2w5hFtqHjifMhEzWtT/qm1LC1Cyj6Wo/fu" data-form-email="true">
+                        <input type="hidden" value="lFC+fiw2YLqYkUp9NAfDlTMucVmDHoc6WSvrT6hfiMHXKUj/jiUaYes1kOYtr8tnjqhMfU1R2xLty8+pLgYBnha8C52Y2RtsQs7jKjryF7H1afiD3pHUsDlNsNrWBnKU" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
