--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/y">free html website templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DfdyiTlaxUtex+nzdYxuQB7i6wUmynYY0Qza551N2cu6LXb06ZcKdMUHZdzJwmTRY8N1WznaVxYKbYSZPMF4DpM2NJ4w5ihN7v3xmQkYG45ysq15iAgTUV9fx3ViPfkP" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fsIfRMgo82hofQMXe2J8SMyw4IH/55pGDDSyqI92LEBlBMdavarX/qZ8eXq6SL0ZDR0/pVHlkd5tV2sSqYWueLYUUSLDTeX9ImvkC2G/NWvGKK0yxO6iCkVogq1MuT3a" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ixmjXjvjX/Hd1Gdna5ZLZl3W+8rcICXEqlRwW4n7MDZFVqsFEEZYCnNZLMkiGZBrzKZ8sAN2jvyY80LddKy2lp6UYW0DNj4L+yukPo5VZx5ueTQF66IcR2NCuhvCGbtT" data-form-email="true">
+                        <input type="hidden" value="2eS1teoAIYjaeY0vlfTBMF6Mj3xlFsp9//6w/q7NS3dOK/veNVcFAwsw38MluyP2EsnTw5nRZmT3i1hTKNsWzyKkvTRlN4kBV2L98V00oLB1M5SpSQygirammz7EXnMA" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
